--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
 
 
-    <title>React App</title>
+    <title>Hotel Booking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
